[project]
name = "customer-support-env"
version = "0.1.0"
description = "Customer support ticket triage OpenEnv environment"
authors = [
    { name = "Jaswanth" }
]
dependencies = [
    "pydantic",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["customer_support_env"]

[tool.setuptools.packages.find]
include = ["server*"]
